[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=1.5.0"]
build-backend = "scikit_build_core.build"

[project]
name = "prototype"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "aiohttp",
  "pyarrow"
]

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["prototype"]
# May need to enable this to tell scikit-build-core to use a specific development mode
# editable.mode = "inplace"
# Make sure the compiled module ends up in the right place
wheel.install-dir = "prototype"

# Make life easy for developers using VSCode/clangd
[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
